--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>springboot-demo</module>
+		<module>cxf-webservice</module>
     </modules>
 
 </project>
