--- a/springCloud-demo/pom.xml
+++ b/springCloud-demo/pom.xml
@@ -5,15 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.pcitc</groupId>
-    <artifactId>framework-study</artifactId>
+    <artifactId>springCloud-demo</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>cxf-webservice</module>
-        <module>springboot-demo</module>
-        <module>MyBatis-demo</module>
-        <module>springCloud-demo</module>
-        <module>shiro-demo</module>
+        <module>microservice</module>
+		<module>spring-cloud-demo</module>
     </modules>
 
 </project>
